# cracking-the-code-interview-exercises

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
1_arrays_and_strings/1_is_unique/: main  main.cpp
1_arrays_and_strings/2_check_permutation/: main  main.cpp
1_arrays_and_strings/3_URLify/: 1.in  1.out  2.in  2.out  3.in  3.out  main  main.cpp
1_arrays_and_strings/4_palindrome_permutation/: 1.in  3.in  4.in  main  main.cpp
1_arrays_and_strings/5_one_away/: main  main.cpp
1_arrays_and_strings/6_string_compression/: main  main.cpp
1_arrays_and_strings/7_rotate_matrix/: 4.out  5.out  main  main.cpp
1_arrays_and_strings/8_zero_matrix/: 2.in  4.in  5.in  main.cpp
1_arrays_and_strings/9_string_rotation/: main.cpp
2_linked_lists/0_linked_list/: linked_list.hpp
2_linked_lists/1_remove_dups/: linked_list.hpp  main.cpp
2_linked_lists/2_return_kth_to_last/: linked_list.hpp  main.cpp
2_linked_lists/3_delete_middle_node/: linked_list.hpp  main.cpp
2_linked_lists/4_partition/: Makefile  linked_list.hpp  main.cpp
2_linked_lists/5_sum_lists/: Makefile  linked_list.hpp  main.cpp
2_linked_lists/6_palindrome/: Makefile  main.cpp
2_linked_lists/7_intersection/: main.cpp
2_linked_lists/8_loop_detection/: linked_list.hpp  main.cpp
3_stacks_and_queues/1_three_in_one/: main.cpp
3_stacks_and_queues/2_stack_min/: main.cpp  stack.hpp
3_stacks_and_queues/3_stack_of_plates/: main.cpp
3_stacks_and_queues/4_queue_via_stacks/: main.cpp
3_stacks_and_queues/5_sort_stack/: main.cpp
3_stacks_and_queues/6_animal_shelter/: main.cpp
4_trees_and_graphs/1_route_between_nodes/: main.cpp
4_trees_and_graphs/2_minimal_tree/: main.cpp
4_trees_and_graphs/3_list_of_depths/: Makefile  main.cpp
4_trees_and_graphs/4_check_balanced/: main.cpp
